--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>tec-convert-galactic-currency</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <groupId>ec.com.tec.galactic.currency</groupId>
   
   <properties>
 
@@ -68,20 +69,21 @@
 	<build>
 
 	
-			<plugins>
-								
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.2</version>
-					<configuration>
-						<source>${java-version}</source>
-						<target>${java-version}</target>
-					</configuration>
-				</plugin>
-				
-			</plugins>
+	<plugins>
+						
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.1</version>
+			<configuration>
+			    <source>1.7</source>
+			    <target>1.7</target>
+			</configuration>
+		</plugin>
+
+		
+	</plugins>
 
 	</build>
-	<groupId>ec.com.tec.galactic.currency</groupId>
+	
 </project>
